table clipping fix

--- a/server/frontend/styles.css
+++ b/server/frontend/styles.css
@@ -2,11 +2,27 @@
 
 /*Media Queries*/
 @media  screen and (min-width:992px) and (max-height: 760px) {
-
   .tableWrapper {
     height: 450px!important;
   }
+}
 
+@media  screen and (min-width:992px) and (max-height: 610px) {
+  .tableWrapper {
+    height: 300px!important;
+  }
+}
+
+@media  screen and (min-width:992px) and (max-height: 460px) {
+  .tableWrapper {
+    height: 200px!important;
+  }
+}
+
+@media  screen and (min-width:992px) and (max-height: 380px) {
+  .tableWrapper {
+    visibility: hidden;
+  }
 }
 
 
